--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aprendiendo Asincronismo en JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "callback": "node Index.js"
   },
   "keywords": [
     "callback",
